Fixed input sizing issue on mobile

--- a/public/style/scss/new.scss
+++ b/public/style/scss/new.scss
@@ -47,6 +47,7 @@
         border-bottom: 1px solid var(--border-color);
         background-color: var(--background-color);
         color: var(--text-color);
+        width: 180px;
 
         &::placeholder {
           color: var(--text-color);
